Fixed Button alignment on download page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,7 +62,7 @@ li a:hover:not(.active) {
   background-color: #2ecc71;
   color: #fcfcfc;
   border-radius: 2px;
-  padding: 12px 16px 10px 16px;
+  padding: 12px 0 10px;
   transition: all 0.3s;
   position: static;
   text-align: center;
